--- a/resources/css/weather.css
+++ b/resources/css/weather.css
@@ -1,21 +1,11 @@
-.index-container {
-    background: linear-gradient(to left,
-    #8d8e8e 0%,
-    #DBDBDB 50%,
-    #DAD9D8 100%);
-
-    height: 100vh;
-}
-
 .weather-dashboard {
     display: grid;
-    grid-template-columns: 30% 60%; /* 2 colunas */
-    grid-template-rows: auto auto; /* 2 linhas */
-    gap: 20px; /* Espaço entre os cards */
-    padding: 40px 100px;
+    grid-template-columns: 30% 60%;
+    grid-template-rows: auto auto;
+    gap: 20px;
+    padding: 25px 100px;
 }
 
-/* Ajustando cada card */
 .card {
     min-height: 250px;
     background: linear-gradient(to top,
@@ -28,33 +18,24 @@
     box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.806);
 }
 
-/* Ocupação das áreas específicas */
-.city-time {
-    grid-column: 1 / 2;
-    grid-row: 1 / 2;
+@media (max-width: 1240px) {
+    .weather-dashboard {
+        grid-template-columns: 100%;
+    }
+
 }
 
-.weather-info {
-    grid-column: 2 / 3;
-    grid-row: 1 / 2;
-}
-
-.forecast {
-    grid-column: 1 / 2;
-    grid-row: 2 / 3;
-}
-
-.hourly-forecast {
-    grid-column: 2 / 3;
-    grid-row: 2 / 3;
-}
-
-/* Responsividade para telas menores */
 @media (max-width: 768px) {
     .weather-dashboard {
-        grid-template-columns: 1fr;
-        grid-template-rows: auto auto auto auto;
+        grid-template-columns: 100%;
+        gap: 20px;
+        padding: 15px;
     }
+
+    .card {
+        padding: 10px;
+    }
+
 }
 
 
